Modificacion de la Clase Venta y otros detalles